fix: Fix character creator getting clipped in half

--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,7 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
+#app {
   overflow: hidden;
 }
 
